--- a/package.json
+++ b/package.json
@@ -2,19 +2,24 @@
   "name": "learnscape-ui",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.0",
-    "zustand": "^4.4.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.1.0",
+    "react-router-dom": "^6.23.1",
+    "zustand": "^4.4.1",
+    "react-player": "^2.16.0",
+    "qrcode.react": "^3.1.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.23",
-    "autoprefixer": "^10.4.14"
-  },
-  "scripts": {
-    "start": "vite",
-    "build": "vite build"
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.2.0"
   }
 }
